[cfp] Prevent line break in user menu

--- a/src/pretalx/static/cfp/scss/_layout.scss
+++ b/src/pretalx/static/cfp/scss/_layout.scss
@@ -87,6 +87,7 @@ header {
       text-align: left;
       color: $brand-primary;
       padding: 8px 16px;
+      white-space: nowrap;
     }
     a:hover {
       text-decoration: none;
